--- a/Source/MiniNugetServer/MiniNugetServer/MiniNugetServer.csproj
+++ b/Source/MiniNugetServer/MiniNugetServer/MiniNugetServer.csproj
@@ -133,7 +133,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\Docker.pubxml" />
+    <None Include="Properties\PublishProfiles\Docker.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
