Docker image is working.

--- a/Source/MiniNugetServer/MiniNugetServer/Web.config
+++ b/Source/MiniNugetServer/MiniNugetServer/Web.config
@@ -13,12 +13,12 @@
     Set the value here to allow people to push/delete packages from the server.
     NOTE: This is a shared key (password) for all users.
     -->
-    <add key="apiKey" value="asarafian"/>
+    <add key="apiKey" value=""/>
     <!--
     Change the path to the packages folder. Default is ~/Packages.
     This can be a virtual or physical path.
     -->
-    <add key="packagesPath" value="~/Packages"/>
+    <add key="packagesPath" value=""/>
     <!--
     Set allowOverrideExistingPackageOnPush to false to mimic NuGet.org's behaviour (do not allow overwriting packages with same id + version).
     -->
