--- a/Source/MiniNugetServer/MiniNugetServer/Web.Debug.config
+++ b/Source/MiniNugetServer/MiniNugetServer/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="apiKey" value="asarafian"/>
+    <add key="packagesPath" value="~/Packages"/>
+  </appSettings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
