--- a/Source/MiniNugetServer/MiniNugetServer/Web.config
+++ b/Source/MiniNugetServer/MiniNugetServer/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -8,28 +8,28 @@
     <!--
     Determines if an Api Key is required to push\delete packages from the server. 
     -->
-    <add key="requireApiKey" value="true"/>
+    <add key="requireApiKey" value="true" />
     <!-- 
     Set the value here to allow people to push/delete packages from the server.
     NOTE: This is a shared key (password) for all users.
     -->
-    <add key="apiKey" value=""/>
+    <add key="apiKey" value="" />
     <!--
     Change the path to the packages folder. Default is ~/Packages.
     This can be a virtual or physical path.
     -->
-    <add key="packagesPath" value=""/>
+    <add key="packagesPath" value="" />
     <!--
     Set allowOverrideExistingPackageOnPush to false to mimic NuGet.org's behaviour (do not allow overwriting packages with same id + version).
     -->
-    <add key="allowOverrideExistingPackageOnPush" value="false"/>
+    <add key="allowOverrideExistingPackageOnPush" value="false" />
     <!--
     Set ignoreSymbolsPackages to true to filter out symbols packages. Since NuGet.Server does not come with a symbol server,
     it makes sense to ignore this type of packages. When enabled, files named `.symbols.nupkg` or packages containing a `/src` folder will be ignored.
     
     If you only push .symbols.nupkg packages, set this to false so that packages can be uploaded.
     -->
-    <add key="ignoreSymbolsPackages" value="true"/>
+    <add key="ignoreSymbolsPackages" value="true" />
     <!--
     Set enableDelisting to true to enable delist instead of delete as a result of a "nuget delete" command.
     - delete: package is deleted from the repository's local filesystem.
@@ -39,11 +39,11 @@
       - "nuget install packageid -version version" command will succeed for both listed and delisted packages.
         e.g. delisted packages can still be downloaded by clients that explicitly specify their version.
     -->
-    <add key="enableDelisting" value="false"/>
+    <add key="enableDelisting" value="false" />
     <!--
     Set enableFrameworkFiltering to true to enable filtering packages by their supported frameworks during search.
     -->
-    <add key="enableFrameworkFiltering" value="false"/>
+    <add key="enableFrameworkFiltering" value="false" />
     <!--
     When running NuGet.Server in a NAT network, ASP.NET may embed the erver's internal IP address in the V2 feed.
     Uncomment the following configuration entry to enable NAT support.
@@ -59,39 +59,40 @@
       </system.Web>
   -->
   <system.web>
-    <httpRuntime maxRequestLength="31457280"/>
-    <compilation debug="true" targetFramework="4.6"/>
+    <httpRuntime maxRequestLength="31457280" />
+    <compilation debug="true" targetFramework="4.6" />
   </system.web>
   <system.serviceModel>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <staticContent>
-      <mimeMap fileExtension=".nupkg" mimeType="application/zip"/>
+      <mimeMap fileExtension=".nupkg" mimeType="application/zip" />
     </staticContent>
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"/>
+      <remove name="WebDAVModule" />
     </modules>
     <handlers>
-      <remove name="WebDAV"/>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,PUT,DEBUG" type="System.Web.Handlers.TransferRequestHandler"
-        preCondition="integratedMode,runtimeVersionv4.0"/>
+      <remove name="WebDAV" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,PUT,DEBUG" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="31457280"/>
+        <requestLimits maxAllowedContentLength="31457280" />
       </requestFiltering>
     </security>
   </system.webServer>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-    </compilers>
-  </system.codedom>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.14.0.832" newVersion="2.14.0.832" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
